调整文件名；遗留问题：kafak-topics.sh脚本无法彻底删除topic，只能标记为deleted.

--- a/ansible/templates/kafka-server.properties.j2
+++ b/ansible/templates/kafka-server.properties.j2
@@ -138,3 +138,5 @@ group.initial.rebalance.delay.ms=0
 ############################# User Settings #############################
 # Delete kafka topics
 delete.topic.enable=true
+
+auto.create.topics.enable=false
